# shorten-backend

./: .dockerignore  .gitignore  README.MD  backup.sql  docker-compose.yml  push-image.sh
UserService/: Dockerfile  Program.cs  UserService.csproj  UserService.http  appsettings.Development.json  appsettings.json
UserService/Controller/: UserController.cs
UserService/Data/: AppDbContext.cs
UserService/Middleware/: ErrorHandling.cs
UserService/Migrations/: 20250415065643_InitialMigration.Designer.cs  20250415065643_InitialMigration.cs  AppDbContextModelSnapshot.cs
UserService/Models/: ChangePasswordRS.cs  LoginRequest.cs  RegisterRequest.cs  UpdateUserRS.cs  User.cs  UserDTOs.cs
UserService/Properties/: launchSettings.json
UserService/Services/: RabbitMqService.cs  UserService.cs
api-gateway/: Cargo.toml  Dockerfile  Dockerfile.dev
api-gateway/src/: api_doc.rs  app_state.rs  auth.rs  cache.rs  helpers.rs  main.rs  models.rs
api-gateway/src/handlers/: auth.rs  health.rs  mod.rs  redirect.rs  shortener.rs  user.rs
common/: Cargo.toml
common/src/: db.rs  lib.rs  logging.rs  rabbitmq.rs
redirect-service/: Cargo.toml  Dockerfile
redirect-service/src/: cache.rs  db.rs  main.rs  models.rs  rabbitmq.rs  routes.rs  schema.rs
shortener-service/: .env  Cargo.toml  Dockerfile  README.MD
shortener-service/src/: db.rs  hashcode.rs  main.rs  migration.rs  model.rs  rabbitmq.rs  routes.rs  schema.rs
shortener-service/src/models/: mod.rs  url.rs  user.rs
shortener-service/src/routes/: auth.rs  lookup.rs  mod.rs  urlshort.rs
