[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
diesel = { version = "2.2", features = ["chrono", "postgres", "r2d2", "uuid"] }
lapin = "2.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
