[package]
name = "shortener-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2", features = ["chrono", "postgres", "r2d2", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
lapin = "2.2"  # RabbitMQ
dotenvy = "0.15"
rand = "0.8"
nanoid = "0.4"
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }